--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "ZM.JPG"
   name             : "Ming Zhang"
   pronouns         : # example: "she/her"  
-  bio              : "Big Data Scientist at Hubei University"
+  bio              : "School of Microelectronics, Hubei University"
   location         : "Wuhan, Hubei, China"
   employer         : "Hubei University"
   uri              : "https://sme.hubu.edu.cn/info/1252/1672.htm" # URL
