--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
     url: /portfolio/
 
   - title: "Guide"
-    url: /guides/
+    url: /year-archive/
         
   #- title: "Blog Posts"
   #  url: /year-archive/
