--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ author:
   avatar           : "ZM.JPG"
   name             : "Ming Zhang"
   pronouns         : # example: "she/her"  
-  bio              : "School of Microelectronics, Hubei University"
+  bio              : "School of Integrated Circuit, Hubei University"
   location         : "Wuhan, Hubei, China"
   employer         : "Hubei University"
-  uri              : "https://sme.hubu.edu.cn/info/1252/1672.htm" # URL
+  uri              : "https://sme.hubu.edu.cn/info/1092/1846.htm" # URL
   email            : "&#x7A;&#x68;&#x61;&#x6E;&#x67;&#x6D;&#x69;&#x6E;&#x67;&#x2E;&#x70;&#x65;&#x74;&#x65;&#x72;&#x40;&#x67;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;" # zhangming.peter@gmail.com
 
   # Academic websites
